--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 body {
-    background-color: lightblue;
-  }
-  
-  h1 {
-    color: white;
-    text-align: center;
-  }
-  
-  p {
-    font-family: verdana;
-    font-size: 20px;
-  }
+  background-color: #2e2925;
+}
 
-  div {
-    align-items: center;
-    color: blueviolet;
-  }
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+div {
+  align-items: center;
+  color: blueviolet;
+}
